--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-langchain==0.2.5
-langchain-community==0.2.5
-langchain-core==0.2.7
-langchain-openai==0.1.8
-langchain-text-splitters==0.2.1
-openai==1.34.0
-chromadb==0.5.0
-python-dotenv==1.0.0
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.62
+langchain-openai==0.3.18
+langchain-text-splitters==0.3.8
+openai==1.82.0
+python-dotenv==1.1.0
 colorama==0.4.6
-tiktoken==0.7.0
-streamlit==1.24.0
-streamlit-chat==0.1.1
+tiktoken==0.9.0
+streamlit==1.45.1
+faiss-cpu==1.11.0
+pypdf==5.5.0
